# schoolbot

./: .air  .env  .env.example  .gitignore  Cargo.toml  Makefile  Procfile  bot.go  cron.go  dialogue.go  go.mod  go.sum  helper.session  homework.go  inline.go  invite.go  keyboard.go  main.go  main.py  menu.go  requirements.txt  schoolhelper.db  start.go  sync.go  templates.go  tunnel.go  weekday.go
config/: config.go
db/: alert.go  class.go  db.go  homework.go  schedule.go  student.go  timetable.go
handlers/: buttons.go  class.go  homework.go  student.go
locale/en/LC_RESOURCE/examples/: lessons_enter.txt  schedule_enter.txt  time_enter.txt
locale/ua/LC_MESSAGES/: dialogue.po  general.po  weekdays.po
locale/ua/LC_RESOURCE/examples/: time_enter.txt
locale/uk/LC_MESSAGES/: dialogue.po  general.po
locale/uk/LC_RESOURCE/examples/: lessons_enter.txt  schedule_enter.txt
models/: class.go  homework.go  session.go  student.go
src/: main.rs
templates/: templates.go
utils/: schedule.go  time.go
