[package]
name = "schooltimesheet"
version = "0.1.0"
authors = ["sinnrrr <dimasoltusyuk@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version =  "0.2", features = ["rt-threaded", "macros", "full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

warp = "0.2"
envmnt = "^0.8.4"

teloxide = "0.3.0"
teloxide-macros = "0.3.2"

pretty_env_logger = "0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

log = "0.4"
serde_json = "1.0"